--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,10 @@ jobs:
     
     - uses: actions/checkout@v2
     
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 7
+        dotnet-version: 7.0.x
     
     - name: Publish .NET Core Project
       run: dotnet publish blog.csproj -c Release -o release --nologo
