--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       uses: actions/upload-pages-artifact@v1
       with:
         # Upload entire repository
-        path: './release/wwwroot'
+        path: './release'
         
     - name: Deploy to GitHub Pages
       id: deployment
