--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,15 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    
+          
     - name: Publish .NET Core Project
       run: dotnet publish blog.csproj -c Release -o release --nologo
+
+    - name: Change base-tag in index.html from / to blog
+      run: sed -i 's/<base href="\/" \/>/<base href="\/blog\/" \/>/g' release/wwwroot/index.html
+      
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
       
     - name: Setup Pages
       uses: actions/configure-pages@v3
@@ -32,7 +38,6 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v1
       with:
-        # Upload entire repository
         path: './release/wwwroot'
         
     - name: Deploy to GitHub Pages
