--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,14 +5,13 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
-  deploy-to-github-pages:
+  deploy:
     runs-on: ubuntu-latest
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    # Deploy to the github-pages environment
+      pages: write
+      id-token: write
     environment:
-      name: github-pages
+      name: GitHub Pages Deployment
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
     
@@ -23,13 +22,13 @@ jobs:
       with:
         dotnet-version: 7.0.x
           
-    - name: Publish .NET Core Project
+    - name: .NET Publish
       run: dotnet publish blog.csproj -c Release -o release --nologo
 
-    - name: Add .nojekyll file
+    - name: Disable Jekyll
       run: touch release/wwwroot/.nojekyll
       
-    - name: Setup Pages
+    - name: Configure Pages
       uses: actions/configure-pages@v3
     
     - name: Upload artifact
