--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       run: touch release/wwwroot/.nojekyll
 
     - name: copy index.html to 404.html
-      run: cp $GITHUB_WORKSPACE/$PUBLISH_FOLDER/index.html $GITHUB_WORKSPACE/$PUBLISH_FOLDER/404.html
+      run: cp ./release/index.html ./release/404.html
       
     - name: Configure Pages
       uses: actions/configure-pages@v3
