--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       run: touch release/wwwroot/.nojekyll
 
     - name: copy index.html to 404.html
-      run: cp /home/runner/work/blog/blog/bin/Release/net7.0/wwwroot/index.html /home/runner/work/blog/blog/bin/Release/net7.0/wwwroot/404.html
+      run: cp /home/runner/work/blog/blog/release/index.html /home/runner/work/blog/blog/release/404.html
       
     - name: Configure Pages
       uses: actions/configure-pages@v3
