make it dark and add nice syntax highlighting

--- a/blog.csproj
+++ b/blog.csproj
@@ -15,8 +15,8 @@
 
   <ItemGroup>
     <None Include="wwwroot\CNAME" />
-    <None Include="wwwroot\code\test1.md" />
-    <None Include="wwwroot\code\test2.md" />
+    <None Include="wwwroot\posts\test1.md" />
+    <None Include="wwwroot\posts\test2.md" />
   </ItemGroup>
 
   <ItemGroup>
