--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       pages: write
       id-token: write
     environment:
-      name: GitHub Pages Deployment
+      name: GitHub Pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:      
     - name: Deploy to GitHub Pages
