--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "main" ]
     paths:
     - 'site/**'
-    - '.github/**'
+    - '.github/workflows/build.yml'
 jobs:
   build:
     runs-on: ubuntu-latest
