--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -29,6 +29,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add rss/rss.xml
+        git add rss.xml
         git commit -m "Generate RSS feed" -a || echo "No changes to commit"
         git push
